# SchemaSight

./: README.md  app.py  env.example  logger_config.py  pyproject.toml  requirements.txt  rquirements.txt  setup_database.py
config/: __init__.py
database/: connection.py  schema.sql  seed_data.sql
services/: embedding_service.py  query_generator.py  search_service.py
utils/: validators.py
